[package]
name = "pipefile"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com"]
description = "Make Unix pipes."
repository = "http://github.com/BartMassey/pipe-rs"
readme = "README.md"
keywords = ["pipe", "file"]
license-file = "COPYING"

[lib]
name = "pipefile"
path = "pipefile.rs"

[dependencies]
libc = "0.2"
clippy = {version = "0.0", optional = true}

[features]
default = []
